# aftok

./: .dockerignore  .gitignore  .gitmodules  .nvimrc  DEPLOY.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  MAYBE.md  Makefile  README.md  TASKS  TASKS.md  aftok.cabal  ananke.cabal  bootstrap.sh  cabal.project  cabal.project.freeze  default.nix  docker-compose.yml  features.md  flake.nix  notes  notes.md  pg.env  quixotic-payouts.cfg.example  quixotic.cabal  quixotic.cfg.example  release.nix  shell.nix  stack-deps.yaml  stack.yaml  trust.txt
client/: .gitignore  Dockerfile  Makefile  README.md  bower.json  package-lock.json  package.json  packages.dhall  spago.dhall
client/dev/: assets  index.html
client/prod/: assets
client/src/: Main.purs
client/src/Aftok/: Billing.purs  HTML.purs  Login.purs  Modals.purs  Navigation.purs  Overview.purs  Project.purs  ProjectList.purs  Signup.purs  Timeline.purs  Types.purs  Zcash.purs
client/src/Aftok/Api/: Account.purs  Billing.purs  Json.purs  Project.purs  Recaptcha.js  Recaptcha.purs  Timeline.purs  Types.purs
client/src/Aftok/Billing/: Create.purs  PaymentRequest.purs
client/src/Aftok/Components/: Zip321QR.purs
client/src/Aftok/HTML/: Classes.purs  Forms.purs  KjuaQR.js  KjuaQR.purs  Properties.purs  QRious.js  QRious.purs
client/src/Aftok/Modals/: ModalFFI.js  ModalFFI.purs
client/src/Aftok/Projects/: Create.purs  Invite.purs
client/src/Aftok/Timeline/: TimelineEventModal.purs
client/src/Landkit/: Card.purs  Modal.purs
conf/: aftok.cfg.example
conf/nginx/conf/: nginx.conf
conf/server/: aftok-migrations.cfg  aftok.cfg
conf/server/conf/: aftok.cfg
conf/zcashd/zcash-data/: zcash.conf
daemon/: AftokD.hs  Main.hs
daemon/AftokD/: AftokM.hs
deploy/: dbinit.sh  docker-compose.prod.yml  letsencrypt_renew.sh  migrate.sh  nginx.conf  setup.sh
deploy/nginx/: mime.types  nginx.conf
docker/: Dockerfile-reactclient  aftok-client-cp.sh  aftok-server.sh  global-stack.yaml  stack.yaml
docs/: tasks.md
http-api/Aftok/Http/: Auth.hs  Json.hs
lib/: Aftok.hs  Quixotic.hs
lib/Aftok/: Auction.hs  Billables.hs  Billing.hs  Client.hs  Config.hs  Currency.hs  Database.hs  Interval.hs  Json.hs  Orphans.hs  Payments.hs  Project.hs  Time.hs  TimeLog.hs  Types.hs  Users.hs  Util.hs
lib/Aftok/Currency/: Bitcoin.hs  ZCash.hs  Zcash.hs
lib/Aftok/Currency/Bitcoin/: Bip70.hs  Payments.hs
lib/Aftok/Currency/Zcash/: Payments.hs  Types.hs  Zip321.hs
lib/Aftok/Database/: Events.hs  PostgreSQL.hs  SQLite.hs  Users.hs
lib/Aftok/Database/PostgreSQL/: Auctions.hs  Billing.hs  Events.hs  Json.hs  Projects.hs  Types.hs  Users.hs
lib/Aftok/Payments/: Bitcoin.hs  Common.hs  Types.hs  Util.hs  Zcash.hs
lib/Aftok/Payments/Bitcoin/: Bip70.hs  Types.hs
lib/Aftok/Payments/Zcash/: Types.hs  Zip321.hs
lib/Aftok/TimeLog/: Serialization.hs
lib/Aftok/Util/: Http.hs
lib/Quixotic/: Auction.hs  Auctions.hs  Client.hs  Database.hs  Interval.hs  Json.hs  Projects.hs  TimeLog.hs  Users.hs
lib/Quixotic/Database/: PostgreSQL.hs  SQLite.hs
lib/Quixotic/Util/: Http.hs
migrations/: 2016-10-13_05-36-55_user-event-log.txt  2016-10-14_02-11-24_project_companions_invitations.txt  2016-10-14_02-14-09_create_invitations.txt  2016-10-14_02-49-36_event-amendments.txt  2016-10-29_20-54-44_auction-timestamps.txt  2016-12-31_03-45-17_create-payments.txt  2017-06-08_04-37-31_event-metadata-ids.txt  2017-09-24_22-06-01_billing-templates.txt  2020-06-06_03-53-54_add-payment-networks.txt  2020-09-14_23-27-54_users-account-recovery.txt  2020-11-25_04-22-24_zcash-support.txt  2021-01-03_16-15-52_auction-descriptions.txt  2021-01-16_05-04-32_event-replacement.txt  2021-01-31_23-40-41_project_first_revenue.txt  2021-02-07_02-43-08_account_detail.txt  2021-10-08_19-43-01_add-payment-metadata.txt
nix/: sources.json
payouts/: Main.hs
payouts/Quixotic/: Client.hs
scripts/: amend.sh  check_zaddr.sh  create_auction.sh  create_billable.sh  create_payment_request.sh  create_project.sh  create_user.sh  get_project.sh  get_project_detail.sh  invite.sh  latest_events.sh  list_entries.sh  list_intervals.sh  list_project_billables.sh  list_project_contributors.sh  list_project_payouts.sh  list_projects.sh  list_user_events.sh  list_user_intervals.sh  log.sh  log_end.sh  log_start.sh  login-xhr.sh  login.sh  logout.sh
servant/: Main.hs
servant/Aftok/: Server.hs
servant/Aftok/Server/: Auth.hs  Orphans.hs
server/: Api.hs  Main.hs  Site.hs
server/Aftok/: QConfig.hs  ServerConfig.hs  Snaplet.hs
server/Aftok/Snaplet/: Auctions.hs  Auth.hs  Billing.hs  Json.hs  Payments.hs  Projects.hs  Users.hs  Util.hs  WorkLog.hs
server/Api/: WorkLog.hs
server/Quixotic/: Api.hs  Snaplet.hs
server/Quixotic/Api/: Types.hs  Users.hs  WorkLog.hs
server/Quixotic/Snaplet/: Auth.hs  Projects.hs  Users.hs  Util.hs  WorkLog.hs
server/templates/: invitation_email.st
sql/: aftok-pg-001.sql  aftok-pg-002.sql  aftok-pg-003.sql  aftok-pg.sql  quixotic-pg.sql  quixotic-sqlite.sql
src/: Ananke.hs  Application.hs  Site.hs
src/Ananke/: Interval.hs  TimeLog.hs
src/Quixotic/: Database.hs  Interval.hs  TimeLog.hs
src/Quixotic/Database/: SQLite.hs
src/sql/: ananke.sql
test/: Test.hs
test/Aftok/: AuctionSpec.hs  Generators.hs  PaymentsSpec.hs  TimeLogSpec.hs
test/Aftok/Util/: HttpSpec.hs
test/Ananke/: TimeLogSpec.hs
test/Quixotic/: TimeLogSpec.hs
test/Quixotic/Util/: HttpSpec.hs
