cabal-version: 3.0
Name:          aftok
Version:       0.1
Synopsis:      The Aftok Collaboration Platform
Description:   A time logging and payment distribution service to enable groups of trusted contributors
               to collaboratively develop commercial applications.
License:       NONE
Author:        Kris Nuttycombe
Maintainer:    kris@aftok.com
Stability:     Experimental
Category:      Web
Build-type:    Simple

common buildenv
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  default-extensions: 
    GADTs,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
  build-depends:
    base,
    relude,
    aeson,
    attoparsec,
    bifunctors,
    bippy,
    bytestring,
    cereal,
    configurator,
    containers,
    cryptonite,
    either,
    errors,
    from-sum,
    HStringTemplate                   >= 0.8.8 && < 0.9,
    HsOpenSSL,
    haskoin-core,
    hourglass,
    iso8601-time,
    lens,
    lrzhs,
    mtl,
    postgresql-simple,
    semigroups,
    template-haskell                  >= 2.18.0 && < 2.19,
    text,
    thyme                             >= 0.4 && < 0.5,
    transformers,
    uuid,
    unordered-containers,
    vector-space,
    x509,
    x509-store,
  mixins: 
    base hiding (Prelude),
    relude (Relude as Prelude),

-- blaze-builder                     >= 0.4.2 && < 0.5,
-- bytestring                        >= 0.11.4 && < 0.12,
-- text                              >= 1.2.5 && < 1.3,
-- containers                        >= 0.6.5 && < 0.7,
-- directory                         >= 1.3.6 && < 1.4,
-- mtl                               >= 2.2.2 && < 2.3,
-- transformers                      >= 0.5.6 && < 0.6,
-- old-locale                        >= 1.0.0 && < 1.1,
-- semigroups                        >= 0.20 && < 0.21,
-- MonadRandom                       >= 0.6 && < 0.7,
-- network-uri                       >= 2.6.4 && < 2.7,
-- scientific                        >= 0.3.7 && < 0.4,
-- unordered-containers              >= 0.2.19 && < 0.3,
-- semigroupoids                     >= 6.0.0 && < 6.1,
-- bifunctors                        >= 5.6.1 && < 5.7,
-- attoparsec                        >= 0.14.4 && < 0.15,
-- base64                            >= 0.4.2 && < 0.5,
-- basement                          >= 0.0.16 && < 0.1,
-- blake2                            >= 0.3.0 && < 0.4,
-- cereal                            >= 0.5.8 && < 0.6,
-- configurator                      >= 0.3.0 && < 0.4,
-- cryptonite                        >= 0.30 && < 0.31,
-- either                            >= 5.0.2 && < 5.1,
-- errors                            >= 2.3.0 && < 2.4,
-- safe                              >= 0.3.19 && < 0.4,
-- free                              >= 5.2 && < 5.3,
-- from-sum                          >= 0.2.3 && < 0.3,
-- groups                            >= 0.5.3 && < 0.6,
-- haskoin-core                      >= 0.19.0 && < 0.20,
-- network                           >= 3.1.4 && < 3.2,
-- heaps                             >= 0.4 && < 0.5,
-- hourglass                         >= 0.2.12 && < 0.3,
-- http-client                       >= 0.7.15 && < 0.8,
-- base64-bytestring                 >= 1.2.1 && < 1.3,
-- http-types                        >= 0.12.4 && < 0.13,
-- kan-extensions                    >= 5.2.5 && < 5.3,
-- postgresql-simple                 >= 0.7.0 && < 0.8,
-- protobuf                          >= 0.2.1 && < 0.3,
-- relude                            >= 1.2.1 && < 1.3,
-- smtp-mail                         >= 0.3.0 && < 0.4,
-- x509                              >= 1.7.7 && < 1.8,
-- x509-store                        >= 1.6.9 && < 1.7,
-- mime-mail                         >= 0.5.1 && < 0.6,
-- system-filepath                   >= 0.4.14 && < 0.5,
-- vector-space                      >= 0.16 && < 0.17,
-- uri-encode                        >= 1.5.0 && < 1.6,
-- uuid                              >= 1.3.15 && < 1.4,
-- HsOpenSSL                         >= 0.11.7 && < 0.12,
-- http-client-openssl               >= 0.3.3 && < 0.4,
-- iso8601-time                      >= 0.1.5 && < 0.2,
-- optparse-applicative              >= 0.18.1 && < 0.19,
-- wreq                              >= 0.5.4 && < 0.6,
-- http-client-tls                   >= 0.3.6 && < 0.4,

library
  import:             buildenv
  hs-source-dirs:     lib
  exposed-modules:    
    Aftok.Auction
    Aftok.Billing
    Aftok.Config
    Aftok.Currency
    Aftok.Currency.Bitcoin
    Aftok.Currency.Bitcoin.Payments
    Aftok.Currency.Bitcoin.Bip70
    Aftok.Currency.Zcash
    Aftok.Currency.Zcash.Types
    Aftok.Currency.Zcash.Payments
    Aftok.Currency.Zcash.Zip321
    Aftok.Database
    Aftok.Database.Events
    Aftok.Database.Users
    Aftok.Database.PostgreSQL
    Aftok.Database.PostgreSQL.Json
    Aftok.Database.PostgreSQL.Types
    Aftok.Database.PostgreSQL.Auctions
    Aftok.Database.PostgreSQL.Billing
    Aftok.Database.PostgreSQL.Events
    Aftok.Database.PostgreSQL.Projects
    Aftok.Database.PostgreSQL.Users
    Aftok.Interval
    Aftok.Json
    Aftok.Payments
    Aftok.Payments.Types
    Aftok.Payments.Bitcoin
    Aftok.Payments.Zcash
    Aftok.Payments.Util
    Aftok.Project
    Aftok.Time
    Aftok.TimeLog
    Aftok.TimeLog.Serialization
    Aftok.Types
    Aftok.Util
    Aftok.Util.Http
  build-depends:
    basement,
    blake2,
    base64,
    blaze-builder,
    free,
    groups,
    heaps,
    http-client,
    http-types,
    kan-extensions,
    lens-aeson,
    MonadRandom,
    mtl,
    network,
    network-uri,
    old-locale,
    protobuf,
    relude,
    safe,
    scientific,
    semigroupoids,
    smtp-mail,
    system-filepath,
    template-haskell,
    uri-encode,

library aftok-http-api
  import:             buildenv
  hs-source-dirs:     http-api
  build-depends:
    base,
    aftok,
    cryptonite,
    http-client,
    http-client-tls,
    http-types,
  exposed-modules:    
    Aftok.Http.Json
    Aftok.Http.Auth

Test-Suite spec
  import:             buildenv
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules: 
    Aftok.AuctionSpec,
    Aftok.Generators,
    Aftok.PaymentsSpec,
    Aftok.TimeLogSpec,
    Aftok.Util.HttpSpec,
  build-depends:
    aftok,
    hspec,
    HUnit,
    QuickCheck,

  build-tool-depends: hspec-discover:hspec-discover

Executable aftok-server
  import:             buildenv
  ghc-options:        -Wall -Werror
  hs-source-dirs:     server
  main-is:            Main.hs
  other-modules: 
    Aftok.ServerConfig,
    Aftok.Snaplet,
    Aftok.Snaplet.Auctions,
    Aftok.Snaplet.Auth,
    Aftok.Snaplet.Billing,
    Aftok.Snaplet.Json,
    Aftok.Snaplet.Payments,
    Aftok.Snaplet.Projects,
    Aftok.Snaplet.Users,
    Aftok.Snaplet.Util,
    Aftok.Snaplet.WorkLog,
  build-depends:
    aftok,
    aftok-http-api,
    base64-bytestring,
    directory,
    http-client,
    http-client-tls,
    http-client-openssl,
    http-types,
    mime-mail,
    mtl,
    network,
    optparse-applicative,
    protobuf,
    smtp-mail,
    snap                              >= 1.1.3 && < 1.2,
    snap-core                         >= 1.0.5 && < 1.1,
    snap-server                       >= 1.1.2 && < 1.2,
    snaplet-postgresql-simple,
    system-filepath,
    wreq,

Executable aftok-servant
  import:             buildenv
  ghc-options:        -Wall -Werror
  hs-source-dirs:     servant
  main-is:            Main.hs
  other-modules: 
    Aftok.Server,
    Aftok.Server.Auth,
    Aftok.Server.Orphans,
  build-depends:
    aftok,
    aftok-http-api,
    base64-bytestring,
    cryptonite                      >= 0.28 && < 0.31,
    dbmigrations                    >= 2.2 && < 2.3,
    dbmigrations-postgresql-simple  >= 0.1 && < 0.2,
    http-client,
    http-client-tls,
    http-client-openssl,
    http-types,
    jose,
    optparse-applicative,
    resource-pool,
    servant                         >= 0.19 && < 0.20,
    servant-auth                    >= 0.4.1 && < 0.5,
    servant-auth-server             >= 0.4.7 && < 0.5,
    servant-server                  >= 0.19.1 && < 0.20,
    wai                             >= 3.2.3 && < 3.3,
    warp                            >= 3.3.20 && < 3.4,

Executable aftok-daemon
  import:             buildenv
  hs-source-dirs:     daemon

  main-is:            Main.hs
  other-modules:      
    AftokD, 
    AftokD.AftokM
  build-depends:
    aftok,
    base64-bytestring,
    http-client,
    http-client-openssl,
    mime-mail,
    mtl,
    network,
    network-uri,
    optparse-applicative,
    protobuf,
    smtp-mail,
    system-filepath,
    wreq,
