Name:                ananke
Version:             0.1
Synopsis:            The Ananke Collaboration Platform
Description:         A service to enable groups of trusted contributors to be paid for their efforts in collaboratively developing commercial applications.
License:             AllRightsReserved
Author:              Kris Nuttycombe
Maintainer:          kris@hylotech.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.20

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     src
  exposed-modules:    Ananke
                      Ananke.TimeLog
                      Ananke.Interval
  build-depends:      base                      >= 4.4     && < 5
                    , lens                      >= 3.7.6   && < 3.11
                    , bifunctors
                    , aeson                     >= 0.7.0.2
                    , text                      >= 0.11    && < 0.12
                    , time                      >= 1.1     && < 1.5
                    , iso8601-time              == 0.1.1
                    , containers                == 0.5.*

Test-Suite spec
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -Werror
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , hspec >= 1.8.1
                    , ananke
                    , aeson
                    , bifunctors
                    , containers
                    , iso8601-time
                    , text
                    , time

Executable ananke-server
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     server
  main-is:            Main.hs
  build-depends:      base
                    , text
                    , time
                    , mtl
                    , bytestring  >= 0.9.1   && < 0.11
                    , scotty >=0.7 && <0.8
                    , sqlite == 0.5.2.2
                    , ananke
