Name:          quixotic
Version:       0.1
Synopsis:      The Quixotic Collaboration Platform
Description:   A service to enable groups of trusted contributors to be paid for their efforts 
               in collaboratively developing commercial applications.
License:       AllRightsReserved
Author:        Kris Nuttycombe
Maintainer:    kris@nutty.land
Stability:     Experimental
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.18

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     lib
  exposed-modules:    Quixotic
                      Quixotic.Auction
                      Quixotic.Database
                      Quixotic.Database.SQLite
                      Quixotic.Interval
                      Quixotic.Json
                      Quixotic.TimeLog
  build-depends:      
      base                 >= 4     && < 5
    , classy-prelude       >= 0.10.1
    , aeson                >= 0.8.0.2
    , bifunctors
    , containers           >= 0.5.5.1
    , either               >= 4.3.1
    , lens                 >= 4.4.0.2
    , safe                 >= 0.3.8
    , errors               >= 1.4.7
    , old-locale
    , sqlite-simple        >= 0.4.8    && < 0.5
    , text                 >= 1.2
    , time                 >= 1.4.2    && < 1.5
    , hourglass            >= 0.2.6    && < 0.3
    , groups               >= 0.4

Test-Suite spec
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -Werror
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:    
      quixotic
    , base
    , classy-prelude
    , aeson
    , bifunctors
    , containers
    , text
    , time
    , iso8601-time
    , hspec >= 1.8.1

Executable quixotic-server
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     server
  main-is:            Main.hs
  build-depends:      
      quixotic
    , base
    , classy-prelude            >= 0.10.2
    , aeson
    , containers
    , either
    , mtl                       >= 2     && < 3
    , lens
    , sqlite-simple
    , text
    , time
    , transformers
    , MonadCatchIO-transformers >= 0.2.1 && < 0.4
    , configurator              
    , optparse-applicative      
    , bytestring                >= 0.9.1 && < 0.11
    , snap-core                 >= 0.9   && < 0.10
    , snap-server               >= 0.9   && < 0.10

Executable quixotic-payouts
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     payouts
  main-is:            Main.hs
  build-depends:      
      quixotic
    , base
    , classy-prelude            >= 0.10.2
    , containers
    , either
    , mtl                       >= 2     && < 3
    , lens
    , text
    , time
    , vector
    , transformers
    , configurator
    , optparse-applicative
    , bytestring
    , network-bitcoin
  
