Name:          quixotic
Version:       0.1
Synopsis:      The Quixotic Collaboration Platform
Description:   A time logging and payment distribution service to enable groups of trusted contributors 
               to collaboratively develop commercial applications.
License:       AllRightsReserved
Author:        Kris Nuttycombe
Maintainer:    kris@nutty.land
Stability:     Experimental
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.18

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     lib
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
  exposed-modules:    Quixotic
                      Quixotic.Auction
                      Quixotic.Client
                      Quixotic.Database
                      Quixotic.Database.PostgreSQL
                      Quixotic.Interval
                      Quixotic.Json
                      Quixotic.TimeLog
                      Quixotic.Util.Http
  build-depends:      
      base                >= 4     && < 5
    , classy-prelude      >= 0.10.1
    , aeson               >= 0.8.0.2
    , attoparsec          >= 0.12.1.2
    , base64-bytestring   >= 1.0.0.1
    , bifunctors
    , blaze-builder       
    , bytestring
    , containers          >= 0.5.5.1
    , configurator             
    , either              >= 4.3.1
    , errors              >= 1.4.7
    , groups              >= 0.4
    , heaps               >= 0.3.1
    , hourglass           >= 0.2.6    && < 0.3
    , lens                >= 4.4.0.2
    , network-bitcoin     >= 1.7.0
    , old-locale
    , postgresql-simple   >= 0.4.9    && < 0.5
    , safe                >= 0.3.8
    , semigroups
    , sqlite-simple       >= 0.4.8    && < 0.5
    , template-haskell
    , text                >= 1.2
    , thyme               >= 0.3.5
    , uuid                >= 1.3.10
    , vector-space
    , wreq

Test-Suite spec
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall -Werror
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
  build-depends:    
      quixotic
    , base
    , classy-prelude
    , aeson
    , attoparsec
    , bifunctors
    , containers
    , hspec >= 1.8.1
    , iso8601-time
    , lens
    , QuickCheck >= 2.7
    , semigroups
    , text
    , thyme
    , vector-space

Executable quixotic-server
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     server
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
  main-is:            Main.hs
  build-depends:      
      quixotic
    , base
    , bytestring
    , classy-prelude            >= 0.10.2
    , aeson
    , containers
    , either
    , iso8601-time
    , mtl                       >= 2     && < 3
    , lens
    , sqlite-simple
    , text
    , thyme
    , transformers
    , MonadCatchIO-transformers >= 0.2.1 && < 0.4
    , configurator              
    , optparse-applicative      
    , postgresql-simple
    , snap                      >= 0.13  && < 0.14
    , snap-core                 >= 0.9   && < 0.10
    , snap-server               >= 0.9   && < 0.10
    , snaplet-postgresql-simple >= 0.6
    , attoparsec
    , base64-bytestring
    , resource-pool-catchio

Executable quixotic-payouts
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  hs-source-dirs:     payouts
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
  main-is:            Main.hs
  build-depends:      
      quixotic
    , base
    , classy-prelude            >= 0.10.2
    , containers
    , either
    , mtl                       >= 2     && < 3
    , lens
    , text
    , thyme
    , vector
    , transformers
    , configurator
    , optparse-applicative
    , bytestring
    , network-bitcoin
  
